[project]
name = "dreamwalk"
version = "0.1.0"
description = "Voice-driven AI image world prototype for a hackathon."
requires-python = ">=3.11"
dependencies = [
    "fal-client>=0.7.0",
    "httpx>=0.28.0",
    "openai>=1.99.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.1",
    "python-fasthtml>=0.12.0",
]
